dbmanager-svc-and-deploy.yaml
#########################################################
# microweb-dbmanager-service                            #
#-------------------------------------------------------#
# 为 psqlmanager 绑定相应的 svc                          #
#-------------------------------------------------------#
# 使用 ClusterIP 类型保证 istio 外部无法访问，提高安全性    #
# 与此同时, 保证其他微服务组件能够在集群内部能成功访问        #
#-------------------------------------------------------#
# 通过自身配置中的 spec.selector.app 与相应deploy配置(见下) #
# 的 spec.template.metadata.labels.app 进行匹配          #
#########################################################
---
apiVersion: v1
kind: Service
metadata:
  name: microweb-dbmanager-svc
  namespace: default
spec:
  selector:
    app: psqlmanager
  # externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      # nodePort: 30090
  clusterIP: 10.96.0.9
  # loadBalancerIP: 78.11.24.19
  # type: NodePort
  type: ClusterIP
---
##################################################################
# microweb-dbmanager-deploy                                      #
#----------------------------------------------------------------#
# deployment 为微服务创建和维持持续可用的 pod                       #
# 主要功能是访问集群外部的 postgres 数据库,                         #
# 从而获得数据, 转换格式, 供其他微服务组件进行使用                    #
#----------------------------------------------------------------#
# 需要配合相应 service(获得集群内或外部的独立IP和port)               #
# 以及 serviceEntry(控制pod的出集群流量,访问外部数据库服务) 来进行使用 #
#----------------------------------------------------------------#
# 通过自身配置中的 spec.template.metadata.labels.app               #
# 与相应deploy配置(见上)的 spec.selector.app  进行匹配              #
#----------------------------------------------------------------#
# ps: 容器中代码内的数据库配置信息, 通过这个yaml的环境变量在启动时传入  #
##################################################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-dbmanager-deployment
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: psqlmanager
        # version: v1 # 这个模块目前不需要 version 标签定位, UI 表现层需要, 用于A/B测试
    spec:
      containers:
      - name: microweb-dbmanager
        image: xinyaotian/psqlmanager:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: "0.3"
            memory: 256Mi
          requests:
            cpu: "0.1"
            memory: 32Mi
---
