fault-injection-nodeport.yaml
######################
# microweb-webui-svc #
######################
---
apiVersion: v1
kind: Service
metadata:
  name: microweb-faultinjection-mem-svc
  namespace: default
spec:
  # externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    # targetPort: 80
    nodePort: 30080
  clusterIP: 10.96.0.12
  selector:
    app: microweb-faultinjection-mem
  type: NodePort
  # type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: microweb-faultinjection-cpu-svc
  namespace: default
spec:
  # externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    # targetPort: 80
    nodePort: 30081
  clusterIP: 10.96.0.4
  selector:
    app: microweb-faultinjection-cpu
  type: NodePort
  # type: ClusterIP
---
######################
# microweb-webui-v1     #
######################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-faultinjection-deployment-mem
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # service identifier
        app: microweb-faultinjection-mem
        version: v1
    spec:
      containers:
      - name: microweb-faultinjection-mem
        image: xinyaotian/microweb-memerr:1.0.0
        imagePullPolicy: IfNotPresent
        # env:
        # - name: DB_MANAGER_IP
          # value: "10.96.0.9"
        # - name: DB_MANAGER_PORT
          # value: "9090"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.1"
            memory: 64Mi
          # requests:
            # cpu: "0.2"
            # memory: 128Mi
---
######################
# microweb-webui-v2     #
######################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-faultinjection-deployment-cpu
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # service identifier
        app: microweb-faultinjection-cpu
        version: v1
    spec:
      containers:
      - name: microweb-faultinjection-cpu
        image: xinyaotian/microweb-cpuerr:1.0.0
        imagePullPolicy: IfNotPresent
        # env:
        # - name: DB_MANAGER_IP
          # value: "10.96.0.9"
        # - name: DB_MANAGER_PORT
          # value: "9090"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.4"
            memory: 64Mi
          # requests:
            # cpu: "0.2"
            # memory: 128Mi
---
