webui-svc-and-deploy.yaml
---
######################
# microweb-webui-svc #
######################
---
apiVersion: v1
kind: Service
metadata:
  name: microweb-webui
  namespace: default
  labels:
    # 与 destinationrule 相匹配
    app: microweb-webui
    service: microweb-webui
spec:
  # externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30080
  clusterIP: 10.96.0.8
  selector:
    # deploy identifier
    # 与 deploy 的 spec.template.metadata.labels.app 相对应
    app: microweb-webui
  # type: NodePort
  type: ClusterIP
---
######################
# microweb-webui-v1     #
######################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-webui-v1
  namespace: default
  labels:
    app: microweb-webui
    # 此处的 version 与 destinationrule 中的
    # spec.subsets.labels.version 相匹配
    # 用于流量管理等各种功能
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # service identifier
        # 与 service 的 spec.selector.app 相对应
        app: microweb-webui
        version: v1
    spec:
      containers:
      - name: microweb-webui
        image: xinyaotian/microweb-ui:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.2"
            memory: 64Mi
          # requests:
            # cpu: "0.2"
            # memory: 128Mi
---
######################
# microweb-webui-v2     #
######################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-webui-v2
  namespace: default
  labels:
    app: microweb-webui
    # 此处的 version 与 destinationrule 中的
    # spec.subsets.labels.version 相匹配
    # 用于流量管理等各种功能
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # service identifier
        # 与 service 的 spec.selector.app 相对应
        app: microweb-webui
        version: v2
    spec:
      containers:
      - name: microweb-webui
        image: xinyaotian/microweb-ui:1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.2"
            memory: 64Mi
          # requests:
            # cpu: "0.2"
            # memory: 128Mi
---
